# transmitron

./: .clang-format  .clang-tidy  .drone.yml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
cmake/: clang-tidy.cmake  cpack.cmake  git-version.cmake  install.cmake
cmake/git-monitor/: configure.cmake  git_monitor.cmake
conan/: conanfile.py
docker/linux/: Dockerfile  build-image.sh  macro-make
docker/linux-x86-64/compiler/: Dockerfile  build.sh  conan.profile  default.ini
docker/linux-x86-64/debug/: Dockerfile  build.sh  (+1 more)
docker/ubuntu-1804/: Dockerfile  build-image.sh  conan.profile  macro-make
docker/ubuntu-2004/: Dockerfile  build-image.sh  conan.profile
docker/windows/: Dockerfile  build-image.sh  conan.profile  macro-make  toolchain.cmake  windows
docs/: build.md
resources/: cmake-installer.sh
resources/debian/: CMakeLists.txt  mimetypes-transmitron.xml  postinst.in.sh  transmitron.in.desktop
resources/desktop/: CMakeLists.txt
resources/icons/: CMakeLists.txt
resources/images/: CMakeLists.txt
resources/windows/: FileFunc.nsh
src/: Arguments.cpp  Arguments.hpp  CMakeLists.txt  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  Homepage.cpp  Homepage.hpp  Info.hpp  Info.in.cpp  LogFormat.hpp  Transmitron.cpp  Transmitron.hpp  main.cpp  transmitron.in.rc
src/Common/: Console.cpp  Console.hpp  Env.Linux.cpp  Env.Windows.cpp  Env.hpp  Extract.cpp  Extract.hpp  Filesystem.hpp  Helpers.cpp  Helpers.hpp  Info.hpp  Info.in.cpp  Log.cpp  Log.hpp  String.cpp  String.hpp  Url.cpp  Url.hpp  Version.hpp  Version.in.cpp  XdgBaseDir.Linux.cpp  XdgBaseDir.Windows.cpp  XdgBaseDir.cpp  XdgBaseDir.hpp
src/Events/: ConnectionEvent.hpp  MessageEvent.hpp  SubscriptionEvent.hpp
src/GUI/: App.cpp  App.hpp  ArtProvider.cpp  ArtProvider.hpp
src/GUI/Events/: Connection.cpp  Connection.hpp  Edit.cpp  Edit.hpp  Layout.cpp  Layout.hpp  Profile.cpp  Profile.hpp  Recording.cpp  Recording.hpp  Subscription.cpp  Subscription.hpp  TopicCtrl.cpp  TopicCtrl.hpp
src/GUI/Models/: FsTree.cpp  FsTree.hpp  History.cpp  History.hpp  KnownTopics.cpp  KnownTopics.hpp  Layouts.cpp  Layouts.hpp  Messages.cpp  Messages.hpp  Profiles.cpp  Profiles.hpp  ProfilesWrapper.cpp  ProfilesWrapper.hpp  Subscriptions.cpp  Subscriptions.hpp
src/GUI/Notifiers/: Layouts.cpp  Layouts.hpp
src/GUI/Resources/gear/: gear-18x18.cpp  gear-18x18.hpp
src/GUI/Resources/history/: history-18x14.cpp  history-18x18.cpp  history-18x18.hpp
src/GUI/Resources/messages/: messages-18x14.cpp  messages-18x14.hpp  messages-18x18.cpp  messages-18x18.hpp
src/GUI/Resources/pin/: not-pinned-18x18.cpp  pinned-18x18.cpp  pinned-18x18.hpp
src/GUI/Resources/plus/: plus-18x18.cpp
src/GUI/Resources/preview/: preview-18x14.cpp  preview-18x18.cpp
src/GUI/Resources/qos/: qos-0.cpp  qos-1.cpp  qos-2.cpp
src/GUI/Resources/send/: send-18x14.cpp  send-18x18.cpp  send-18x18.hpp
src/GUI/Resources/subscription/: subscription-18x14.cpp  subscription-18x14.hpp  subscription-18x18.cpp
src/GUI/Tabs/: Client.cpp  Client.hpp  Homepage.cpp  Homepage.hpp  Settings.cpp  Settings.hpp
src/GUI/Types/: ClientOptions.cpp  ClientOptions.hpp  Subscription.cpp  Subscription.hpp
src/GUI/Widgets/: Edit.cpp  Edit.hpp  Layouts.cpp  Layouts.hpp  TopicCtrl.cpp  TopicCtrl.hpp
src/Helpers/: Extract.hpp  Helpers.cpp  Helpers.hpp  Log.cpp  Log.hpp  Url.cpp  Url.hpp
src/MQTT/: BrokerOptions.cpp  BrokerOptions.hpp  Client.cpp  Client.hpp  Message.cpp  Message.hpp  QualityOfService.hpp  Subscription.cpp  Subscription.hpp
src/Models/: Connections.cpp  Connections.hpp  History.cpp  History.hpp  SubscriptionData.cpp  SubscriptionData.hpp  Subscriptions.cpp  Subscriptions.hpp
src/Transmitron/: App.cpp  App.hpp  Info.hpp  Info.in.cpp  LogFormat.hpp  Version.hpp  Version.in.cpp
src/Transmitron/Events/: Connection.hpp  Edit.hpp  Layout.hpp  Message.hpp  Profile.hpp  Recording.hpp  Subscription.hpp  TopicCtrl.hpp
src/Transmitron/Models/: Connections.cpp  Connections.hpp  History.cpp  History.hpp  KnownTopics.cpp  KnownTopics.hpp  Layouts.cpp  Layouts.hpp  Messages.cpp  Messages.hpp  Profiles.cpp  Profiles.hpp  SnippetFolders.cpp  SnippetFolders.hpp  Snippets.cpp  Snippets.hpp  Subscriptions.cpp  Subscriptions.hpp
src/Transmitron/Notifiers/: Layouts.cpp  Layouts.hpp
src/Transmitron/Resources/gear/: gear-18x18.hpp
src/Transmitron/Resources/history/: history-18x14.cpp  history-18x14.hpp  history-18x18.cpp  history-18x18.hpp
src/Transmitron/Resources/messages/: messages-18x14.cpp  messages-18x14.hpp  messages-18x18.cpp  messages-18x18.hpp
src/Transmitron/Resources/pin/: not-pinned-18x18.cpp  not-pinned-18x18.hpp  pinned-18x18.cpp  pinned-18x18.hpp
src/Transmitron/Resources/plus/: plus-18x18.cpp  plus-18x18.hpp
src/Transmitron/Resources/preview/: preview-18x14.cpp  preview-18x14.hpp  preview-18x18.cpp  preview-18x18.hpp
src/Transmitron/Resources/qos/: qos-0.cpp  qos-0.hpp  qos-1.cpp  qos-1.hpp  qos-2.cpp  qos-2.hpp
src/Transmitron/Resources/send/: send-18x14.cpp  send-18x14.hpp  send-18x18.cpp  send-18x18.hpp
src/Transmitron/Resources/snippets/: snippets-18x14.cpp  snippets-18x14.hpp  snippets-18x18.cpp  snippets-18x18.hpp
src/Transmitron/Resources/subscription/: subscription-18x14.cpp  subscription-18x14.hpp  subscription-18x18.cpp  subscription-18x18.hpp
src/Transmitron/Tabs/: Client.cpp  Client.hpp  Homepage.cpp  Homepage.hpp  Settings.cpp  Settings.hpp
src/Transmitron/Types/: ClientOptions.cpp  ClientOptions.hpp  Connection.cpp  Connection.hpp  SnippetNode.cpp  SnippetNode.hpp  Subscription.cpp  Subscription.hpp  SubscriptionData.cpp  SubscriptionData.hpp
src/Transmitron/ValueObjects/: BrokerOptions.cpp  BrokerOptions.hpp
src/Transmitron/Widgets/: Container.cpp  Container.hpp  Edit.cpp  Edit.hpp  Layouts.cpp  Layouts.hpp  SnippetDialog.cpp  SnippetDialog.hpp  TopicCtrl.cpp  TopicCtrl.hpp
src/Widgets/: Edit.cpp  Edit.hpp
src/images/pin/: not-pinned-18x18.hpp
src/images/plus/: plus-18x18.cpp
src/images/qos/: qos-0.hpp  qos-1.hpp  qos-2.hpp
src/images/send/: send-18x18.cpp
(+14 files in other folders)
